--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@firebase/firestore": "^4.6.5",
-    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-google-signin/google-signin": "^12.2.1",
-    "@react-native-picker/picker": "^2.7.7",
+    "@react-native-picker/picker": "2.7.5",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/elements": "^1.3.31",
     "@react-navigation/native": "^6.1.18",
@@ -20,24 +20,27 @@
     "email-validator": "^2.0.4",
     "expo": "^51.0.22",
     "expo-auth-session": "~5.5.2",
-    "expo-font": "~12.0.9",
-    "expo-image-picker": "^15.0.7",
-    "expo-router": "^3.5.18",
+    "expo-font": "~12.0.10",
+    "expo-image-picker": "~15.0.7",
+    "expo-random": "~14.0.1",
+    "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.5",
     "firebase-admin": "^12.3.0",
     "formik": "^2.4.6",
     "react": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "0.74.5",
     "react-native-datepicker": "^1.7.2",
     "react-native-image-picker": "^7.1.2",
+    "react-native-maps": "^1.18.0",
     "react-native-picker-select": "^9.2.0",
-    "react-native-safe-area-context": "^4.10.8",
-    "react-native-screens": "^3.32.0",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-webview": "13.8.6",
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.0"
   },
   "private": true
 }
